# dioxus-prototype

./: .gitignore  .prettierignore  .prettierrc.toml  Cargo.toml  Dioxus.toml  LICENSE.txt  README.md  build-serve-dist.sh  index.html  package-lock.json  package.json  rustfmt.toml
assets/: app-animation.css  app-colophon.css  app-flashcard.css  app-home.css  app-nav.css  app-retirement.css  app-slideshow.css  flashcard.css  stylesheet.css
assets/barchart/: app-barchart.css
assets/flashcard/: app-flashcard.css
assets/home/: app-home.css
assets/manual/: index.html
assets/nav/: app-nav.css
assets/template/: stylesheet.css
examples/: prerender.rs
merge/manual/: index.html
merge/merged/: index.html
public/: flashcard.css  stylesheet.css
public/animation/: app-animation.css
public/barchart/: app-barchart.css
public/colophon/: app-colophon.css
public/flashcard/: app-flashcard.css
public/retirement/: app-retirement.css
public/slideshow/: app-slideshow.css
src/: lib.rs  main.rs  route.rs  router.rs
src/component/: mod.rs
src/component/animation/: color.rs  constants.rs  frame_rater_updater_input.rs  looper.rs  mod.rs
src/component/animation/animator/: square_sprite.rs
src/component/app/: mod.rs
src/component/barchart/: barchart_data.rs  barchart_row.rs  mod.rs
src/component/barchart/barchart_svg/: barchart_row.rs  barchart_row_data.rs  mod.rs
src/component/colophon/: mod.rs
src/component/flashcard/: answer_button.rs  mod.rs  mode.rs  question_text.rs  show_button.rs
src/component/footer/: mod.rs
src/component/home/: mod.rs
src/component/nav/: mod.rs
src/component/retirement/: mod.rs  reset_button.rs
src/component/slideshow/: constants.rs  mod.rs
src/component/template/: mod.rs
src/component/translator/: mod.rs
src/components/: app.rs  blog.rs  colophon.rs  flashcard.rs  footer.rs  high_five.rs  home.rs  mod.rs  nav.rs  nav_bar.rs  page_layout.rs  page_not_found.rs  page_template.rs  story_listing.rs
src/components/animation/: animator.rs  color.rs  constants.rs  inputs.rs  mod.rs  user_input.rs
src/components/animation/animator/: mod.rs  square_sprite.rs
src/components/app/: mod.rs
src/components/barchart/: mod.rs
src/components/colophon/: mod.rs
src/components/flashcard/: answer_button.rs  card.rs  flashcard.rs  link_button.rs  mod.rs  mode.rs  question.rs  question_text.rs  show_button.rs
src/components/footer/: mod.rs
src/components/home/: mod.rs
src/components/language_select/: mod.rs
src/components/login/: aliases.rs  constants.rs  errors.rs  mod.rs  oidc.rs  query.rs  types.rs
src/components/login/props/: client.rs
src/components/nav/: mod.rs
src/components/page_not_found/: mod.rs
src/components/retirement/: language_select.rs  mod.rs  reset_button.rs  translator.rs
src/components/slideshow/: constants.rs  control_panel.rs  controller.rs  input_handler.rs  looper.rs  mod.rs  slideshow_state.rs  user_input.rs
src/components/template/: mod.rs
src/components/translator/: mod.rs
