[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "CroftSoft Dioxus Prototype"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
keywords = ["dioxus"]
license = "MIT"
name = "dioxus-prototype"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/dioxus-prototype"
version = "0.6.1-SNAPSHOT"

[dependencies]
async-std = "1.12.0"
com-croftsoft-core = "0.14.0"
com-croftsoft-lib-string = "0.1.0"
dioxus = { version = "0.6.1", features = ["fullstack", "router"] }
dioxus-charts = "0.3.1"
dioxus-logger = "0.6.1"
gloo-events = "0.2.0"
rand = "0.8.5"
serde = "1.0.196"
tracing = "0.1.41"

[dependencies.dioxus-free-icons]
# https://github.com/dioxus-community/dioxus-free-icons/issues/26
# features = ["material-design-icons-action"]
features = ["font-awesome-regular", "font-awesome-solid"]
version = "0.9.0"

[dependencies.getrandom]
features = ["js"]
version = "0.2.12"

[dependencies.web-sys]
features = [
  "CanvasRenderingContext2d",
  "Document",
  "DomRect",
  "Element",
  "Event",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlDivElement",
  "HtmlInputElement",
  "MouseEvent",
  "Performance",
  "Window",
  "console",
]
version = "0.3.68"

[features]
default = ["web"]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
