[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "CroftSoft Dioxus Prototype"
edition = "2024"
homepage = "https://www.CroftSoft.com/"
keywords = ["dioxus"]
license = "MIT"
name = "dioxus-prototype"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/dioxus-prototype"
rust-version = "1.87"
version = "0.7.1-SNAPSHOT"

[dependencies]
com-croftsoft-core = "0.14.0"
# com-croftsoft-lib-animation = { path = "../com-croftsoft-lib-animation" }
com-croftsoft-lib-animation = "0.1.0"
com-croftsoft-lib-role = "0.5.1"
com-croftsoft-lib-string = "0.1.0"
dioxus = { version = "0.7.2", features = ["fullstack", "router"] }
# TODO: Re-enable barchart when dioxus-charts supports Dioxus 0.7
# dioxus-charts = "0.3.1"
gloo-events = "0.2.0"
tracing = "0.1.44"

[dependencies.dioxus-free-icons]
# https://github.com/dioxus-community/dioxus-free-icons/issues/26
# features = ["material-design-icons-action"]
features = ["font-awesome-regular", "font-awesome-solid"]
version = "0.10.0"

[dependencies.web-sys]
features = [
  "CanvasRenderingContext2d",
  "Document",
  "DomRect",
  "Element",
  "Event",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlDivElement",
  "HtmlInputElement",
  "MouseEvent",
  "Performance",
  "Window",
  "console",
]
version = "0.3.77"

[features]
default = ["web"]
server = ["dioxus/server"]
web = ["dioxus/web"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
